Fix: filter on desktop break after add mobile collapse

--- a/project/app/static/css/custom.css
+++ b/project/app/static/css/custom.css
@@ -130,7 +130,7 @@ td.field-get_note {
 }
 
 .filter-mobile--open .filter-body {
-    display: block;
+    display: flex;
 }
 
 @media screen and (max-width:768px) {
